--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.getbase.jenkins.plugins</groupId>
     <artifactId>datadog-statsd</artifactId>
-    <version>0.0.1</version>
+    <version>0.1</version>
     <name>Build metrics sent to DogStatsD</name>
     <description>Jenkins plugin to publish build metrics to DogStatsD</description>
     <packaging>hpi</packaging>
@@ -62,6 +62,11 @@
             <artifactId>java-dogstatsd-client</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-step-api</artifactId>
+            <version>2.13</version>
+        </dependency>
 
         <!-- required plugins -->
         <dependency>
@@ -74,7 +79,6 @@
             <artifactId>metrics</artifactId>
             <version>${jenkins-metrics.version}</version>
         </dependency>
-
         <!-- for testing -->
     </dependencies>
 </project>
